Add translations on how to interpret your results

--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -460,7 +460,7 @@ pt:
     contact:
       title: Contact
       email_message: 'For more information about The Future of Conservation project please email:'
-    title: "How to interpret your results"
+    title: "Como interpretar seus resultados"
     content: '<p>
     The plot above presents a summary of your views (the bold points and lines) on three axes. These axes represent three key dimensions of the conservation debate derived from statistical analysis of results from the first 9,264 respondents to the Future of Conservation survey. These dimensions are: A ‘people-centred conservation’ (relating to the role that people should play in conservation), B ‘science-led ecocentrism’ (relating to the role of science in the conservation of species and ecosystems), and C ‘conservation through capitalism’ (relating to the role of corporations and market based approaches in conservation).
     </p>
