Last portugeuse translations for menu items

--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -197,7 +197,7 @@ pt:
       </ul>
       The website is hosted by the <a href="https://www.unep-wcmc.org" title="Visit the UN Environment World Conservation Monitoring Centre website">UN Environment World Conservation Monitoring Centre.</a><p>'
     -
-      link: 'Ethics and Data'
+      link: 'Ética e dados'
       title: 'Ética de pesquisa e armazenamento de dados'
       content: '<p>Este projeto foi aprovado pelo Comitê de Ética em Pesquisa da Universidade de Leeds (Reino Unido).</p>
       <p>Suas respostas contribuirão para o projeto da Pesquisa O Futuro da Conservação. Todos os dados coletados serão armazenados de forma segura pelo Centro de Monitoramento de Conservação Mundial da ONU, e serão utilizados exclusivamente para fins acadêmicos. É possível que uma versão dos dados totalmente anônima, excetuando toda informação pessoal que poderia identificar os participantes, seja compartilhada com outros pesquisadores.</p>
@@ -372,7 +372,7 @@ pt:
 
   about_debate:
     -
-      link: 'About the debate'
+      link: 'Sobro o debate'
       title: 'Sobre o Futuro da Conservação'
       content: '<p>Embora os debates sobre os objetivos e métodos utilizados para a conservação sejam provavelmente tão antigos quanto a própria conservação, o debate sobre a “nova conservação” é recente e foi estimulado por um artigo de Kareiva e Marvier (2012), intitulado <a href="https://academic.oup.com/bioscience/article/62/11/962/263056" title="Visit the ‘What is conservation science’ paper" target="_blank">‘What is conservation science?’</a> (O que ciência da conservação?).</p>
       <p>Dois pontos de vista proeminentes emergiram nesse debate, o de Kareiva e Marvier, que eles chamaram de "nova conservação", e um ponto de vista oposto que nós chamamos de "conservação tradicional". Nossa pesquisa emergiu da preocupação de que essas duas posições não descrevem adequadamente a gama de pontos de vista de pessoas que trabalham com a conservação em todo o mundo.</p>
