add missing PT translations

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -102,7 +102,7 @@ es: #new start
     about_gofox: Sobre GO-FOX
     log_in: Acceda a su cuenta
     home: Inicio
-    scroll_nav_title: "ES: Sections on this page"
+    scroll_nav_title: "Secciones en esta página"
 
   pagination:
     of: "De"
