--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -102,7 +102,7 @@ fr:
     about_gofox:  À propos de GO-FOX
     log_in: S’identifier
     home: Accueil
-    scroll_nav_title: "FR: Sections on this page"
+    scroll_nav_title: "Sections sur cette page"
 
   pagination:
     of: "sur"
