add bullet point to slide deck link

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -250,10 +250,9 @@ en:
       research so that you are well placed to describe it to a group with whom you are working. You might alternatively
       consider sharing the video with the group directly, so that your students or participants can get better understand
       the project before you share their own results with them.
-      <br/><br/>
-      <a href="/GOFOX_lecture_slides.pptx" title="Download slide-deck">Download Slide-deck</a>
-
-      <br/><br/>
+      <ul><li>
+      <a href="/GOFOX_lecture_slides.pptx" title="Download slide-deck">Download Slide-deck (PowerPoint)</a>
+      </li></ul>
       This slide-deck covers similar material to the video above. You are welcome to use it as it is, or to edit it
       for your purposes. Please ensure that you acknowledge the source when doing so.
       </p>'
